added legend and disable inputs, fixes: #7885

--- a/public/assets/stylesheets/less/admission.less
+++ b/public/assets/stylesheets/less/admission.less
@@ -49,4 +49,7 @@
     &:checked + label {
         .background-icon('room-clear', 'status-green');
     }
+    &:disabled + label {
+        .background-icon('room-request', 'inactive');
+    }
 }
