adjust color of arrow, re #7892

--- a/public/assets/stylesheets/less/personal-notifications.less
+++ b/public/assets/stylesheets/less/personal-notifications.less
@@ -182,7 +182,7 @@
             z-index: 2;
         }
 
-        .background-icon('decline', 'clickable');
+        .background-icon('accept', 'clickable');
         background-color: @light-gray-color-20;
         background-repeat: no-repeat;
         background-position: right 8px center;
