--- a/public/assets/stylesheets/less/personal-notifications.less
+++ b/public/assets/stylesheets/less/personal-notifications.less
@@ -202,6 +202,7 @@
             opacity: 0;
             padding-bottom: 0;
             padding-top: 0;
+            pointer-events: none;
         }
     }
 }
