positioning of "show all" link, re #7893

--- a/public/assets/stylesheets/less/globalsearch.less
+++ b/public/assets/stylesheets/less/globalsearch.less
@@ -168,6 +168,8 @@
                     font-size: @font-size-small;
                     font-weight: normal;
                     line-height: @font-size-h3;
+                    margin-bottom: auto;
+                    margin-top: auto;
                     text-align: right;
                     width: 100px;
                 }
