styling for <mark> tag, re #7893

--- a/public/assets/stylesheets/less/globalsearch.less
+++ b/public/assets/stylesheets/less/globalsearch.less
@@ -253,6 +253,10 @@
                     }
                 }
             }
+
+            mark {
+                background-color: @content-color-40;
+            }
         }
     }
 }
