responsive view, re #7893

--- a/public/assets/stylesheets/less/responsive.less
+++ b/public/assets/stylesheets/less/responsive.less
@@ -374,6 +374,16 @@ label[for="responsive-toggle"] {
         }
     }
 
+    #globalsearch-searchbar {
+        #globalsearch-input {
+            max-width: 215px;
+        }
+        #globalsearch-list {
+            width: 100vw;
+            left: -46px;
+        }
+    }
+
     #barBottomright {
         ul {
             li:first-child {
