--- a/public/assets/stylesheets/less/quicksearch.less
+++ b/public/assets/stylesheets/less/quicksearch.less
@@ -1,5 +1,5 @@
 /* --- Quicksearch ---------------------------------------------------------- */
-form#quicksearch {
+form#search_sem_quick_search_frame {
     display: flex;
     align-items: center;
 }
