--- a/public/assets/stylesheets/less/responsive.less
+++ b/public/assets/stylesheets/less/responsive.less
@@ -354,7 +354,7 @@ label[for="responsive-toggle"] {
     #quicksearch_item {
         padding: 0;
     }
-    #quicksearch {
+    #search_sem_quick_search_frame {
         .flex();
         .flex-direction-row();
         .flex-justify-content(flex-end);
