refs #7036, pre tags break layout as well

--- a/public/assets/stylesheets/less/content.less
+++ b/public/assets/stylesheets/less/content.less
@@ -41,6 +41,10 @@
 // to that instead.
 .formatted-content {
     display: inline;
+
+    pre {   // pre-formatted content breaks the Stud.IP Layout!
+        white-space: pre-line;
+    }
 }
 
 // Emphasize tt tags a little bit so ##monospace## blocks will stick out.
