--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -1527,6 +1527,9 @@ form.default label.packed button {
 .formatted-content {
   display: inline;
 }
+.formatted-content pre {
+  white-space: pre-line;
+}
 .formatted-content tt {
   background-color: rgba(255, 255, 255, 0.5);
   border: 1px solid rgba(0, 0, 0, 0.5);
