refs #7036, handling images better on different screen sizes in forum

--- a/public/plugins_packages/core/Forum/stylesheets/forum.less
+++ b/public/plugins_packages/core/Forum/stylesheets/forum.less
@@ -57,7 +57,8 @@ html.no-js #forum {
 
     img {
         border: none;
-        max-width: 600px;
+        max-width: 100%;
+        height: auto;
     }
 
     span.highlight {
