--- a/public/assets/stylesheets/less/messages.less
+++ b/public/assets/stylesheets/less/messages.less
@@ -53,27 +53,16 @@ a.message-tag {
     }
   }
 }
+
+#message_metadata tr {
+    vertical-align: top;
+}
+
 #adressees {
-    max-height: 60px;
+    max-height: 120px;
     overflow: auto;
     li.adressee {
         white-space: nowrap;
-    }
-    li:after {
-        content: ",";
-        margin-left: -5px;
-        margin-right: 2px;
-    };
-    li:last-child:after { content:"" };
-    ul, li {
-        list-style: none;
-        margin: 0;
-        padding: 0;
-    }
-    li {
-        float: left;
-        padding-right: 2px;
-        padding-bottom: 2px;
     }
 }
 
