--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -4663,31 +4663,15 @@ a.message-tag::before {
   height: 20px;
   line-height: 20px;
 }
+#message_metadata tr {
+  vertical-align: top;
+}
 #adressees {
-  max-height: 60px;
+  max-height: 120px;
   overflow: auto;
 }
 #adressees li.adressee {
   white-space: nowrap;
-}
-#adressees li:after {
-  content: ",";
-  margin-left: -5px;
-  margin-right: 2px;
-}
-#adressees li:last-child:after {
-  content: "";
-}
-#adressees ul,
-#adressees li {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-#adressees li {
-  float: left;
-  padding-right: 2px;
-  padding-bottom: 2px;
 }
 .message_body {
   background-color: #e7ebf1;
