add margin for messsages/write, fixes #8089

--- a/public/assets/stylesheets/less/messages.less
+++ b/public/assets/stylesheets/less/messages.less
@@ -81,6 +81,7 @@ a.message-tag {
 .message-search-wrapper {
     .flex();
     .flex-justify-content(flex-start);
+    margin-top: 1ex;
 
     > * {
         margin-right: 1em;
